[package]
name = "fish-fluent-extraction"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
repository.workspace = true
license.workspace = true
description = "proc-macro for extracting IDs for fluent translation"

[lib]
proc-macro = true

[dependencies]
fish-tempfile.workspace = true
fluent-ftl-tools.workspace = true
fluent-syntax.workspace = true
proc-macro2.workspace = true
syn.workspace = true

[build-dependencies]
rsconf.workspace = true

[lints]
workspace = true
