[package]
name = "fish-fluent"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
repository.workspace = true

[dependencies]
fish-fluent-extraction = { workspace = true, optional = true }
fluent.workspace = true
once_cell.workspace = true
rust-embed.workspace = true
unic-langid.workspace = true

[features]
fluent-extract = ["dep:fish-fluent-extraction"]

[lints]
workspace = true
