[package]
name = "fish-gettext-extraction"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
repository.workspace = true
description = "proc-macro for extracting strings for gettext translation"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true

[lints]
workspace = true
