[package]
name = "fish-gettext-extraction"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "proc-macro for extracting strings for gettext translation"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
fish-tempfile.workspace = true
proc-macro2.workspace = true

[build-dependencies]
rsconf.workspace = true

[lints]
workspace = true
