[package]
name = "fish-printf"
edition.workspace = true
rust-version.workspace = true
version = "0.2.1"
repository.workspace = true
description = "printf implementation, based on musl"
license = "MIT"

[dependencies]
assert_matches.workspace = true
libc.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
widestring = { workspace = true, optional = true }

[lints]
workspace = true
