[package]
name = "xtask"
version = "0.0.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anstyle.workspace = true
clap.workspace = true
fish-build-helper.workspace = true
fish-tempfile.workspace = true
ignore.workspace = true
pcre2.workspace = true
walkdir.workspace = true

[build-dependencies]
fish-build-helper.workspace = true
rsconf.workspace = true
