[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
fish-build-helper.workspace = true
fish-common.workspace = true
fish-tempfile.workspace = true
fish-widestring.workspace = true
ignore.workspace = true
pcre2.workspace = true
walkdir.workspace = true
